# cornac

./: .appveyor.yml  .codecov.yml  .coveragerc  .gitignore  .readthedocs.yml  .travis.yml  0.11.0  1.10.0  AUTHORS  Dockerfile  ISSUE_TEMPLATE.md  MANIFEST.in  PULL_REQUEST_TEMPLATE.md  README.md  appveyor.yml  do.py  docker-compose.yml  experiment_log.txt  experiment_log_1.txt  experiment_log_10.txt  experiment_log_11.txt  experiment_log_12.txt  experiment_log_13.txt  experiment_log_14.txt  experiment_log_15.txt  experiment_log_16.txt  experiment_log_17.txt  experiment_log_18.txt  experiment_log_19.txt  experiment_log_2.txt  experiment_log_20.txt  experiment_log_21.txt  experiment_log_22.txt  experiment_log_23.txt  experiment_log_24.txt  experiment_log_25.txt  experiment_log_26.txt  experiment_log_27.txt  experiment_log_28.txt  experiment_log_29.txt  (+46 more)
.circleci/: config.yml
.github/: PULL_REQUEST_TEMPLATE.md  draft-config.yml
cornac/: __init__.py  exception.py  hyperopt.py  serving.py
data/: input-matrix.csv  office.mat
docs/: Makefile  announcement.html  generate_model_js.py  make.bat  requirement.txt  requirements.txt
examples/: README.md  RecVAE_Example.ipynb  amr_clothing.py  ann_all.ipynb  ann_example.py  autorec.py  beacon_tafeng.py  biased_mf.py  bpr.py  bpr_netflix.py  c2pf.py  c2pf_example.py  causalrec_clothing.py  cdl_example.py  cdr_example.py  cf_example.py  companion_example.py  conv_mf_example.py  cornac_test.ipynb  ctr_example_citeulike.py  cvae_example.py  cvaecf_filmtrust.py  dmrl_clothes_example.py  dmrl_example.py  dnntsp_tafeng.py  (+54 more)
(+604 files in other folders)
