[build-system]
requires = [
    "setuptools>=42",
    "wheel",
    "Cython>=0.29.21",
    "numpy>2.0.0",
    "scipy",
]
build-backend = "setuptools.build_meta"

[project]
name = "cornac"
version = "2.3.4"
description = "A Comparative Framework for Multimodal Recommender Systems"
readme = "README.md"
dependencies = [
    "numpy>2.0.0",
    "scipy",
    "tqdm",
    "powerlaw"
]
requires-python = ">=3.9"
license = { file = "LICENSE" }
keywords = [
    "recommender system",
    "collaborative filtering",
    "multimodal",
    "preference learning",
    "recommendation",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Education",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: Apache Software License",
    "Topic :: Software Development",
    "Topic :: Scientific/Engineering",
]

[project.urls]
Homepage = "https://cornac.preferred.ai"

[project.optional-dependencies]
tests = [
    "pytest",
    "pytest-pep8",
    "pytest-xdist",
    "pytest-cov",
    "Flask",
]
